@@ -1,3 +1,4 @@
+2016-03-17 Added labels for showing documentation in editor
 2016-03-16 Added show and hide methods in Magic Box module
 2016-03-16 Added mode on and off to keyboard navigation
 2016-03-15 Fixed displaying background in Memo Game module
